// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text.web renders a snapshot 1`] = `
.c0 {
  font-size: 16px;
  color: #191919;
  margin: 0px;
  -webkit-align-self: auto;
  -ms-flex-item-align: auto;
  align-self: auto;
  cursor: auto;
}

<span
  className="c0"
  color="#191919"
  size={16}
>
  Apple
</span>
`;

exports[`Text.web renders a snapshot with \`alignSelf:center\` 1`] = `
.c0 {
  font-size: 16px;
  color: #191919;
  margin: 0px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  cursor: auto;
}

<span
  className="c0"
  color="#191919"
  size={16}
>
  Apple
</span>
`;

exports[`Text.web renders a snapshot with \`color:blue\` 1`] = `
.c0 {
  font-size: 16px;
  color: blue;
  margin: 0px;
  -webkit-align-self: auto;
  -ms-flex-item-align: auto;
  align-self: auto;
  cursor: auto;
}

<span
  className="c0"
  color="blue"
  size={16}
>
  Apple
</span>
`;

exports[`Text.web renders a snapshot with \`margin:'1 0'\` 1`] = `
.c0 {
  font-size: 16px;
  color: #191919;
  margin: 10px 0px;
  -webkit-align-self: auto;
  -ms-flex-item-align: auto;
  align-self: auto;
  cursor: auto;
}

<span
  className="c0"
  color="#191919"
  size={16}
>
  Apple
</span>
`;

exports[`Text.web renders a snapshot with \`size:small\` 1`] = `
.c0 {
  font-size: 14px;
  color: #191919;
  margin: 0px;
  -webkit-align-self: auto;
  -ms-flex-item-align: auto;
  align-self: auto;
  cursor: auto;
}

<span
  className="c0"
  color="#191919"
  size="small"
>
  Apple
</span>
`;
